@@ -41,6 +41,7 @@ CSetDialogs::CSetDialogs()
 	, m_bInitialized(FALSE)
 	, m_dwAutocompletionTimeout(0)
 	, m_bSpell(TRUE)
+	, m_bCheckRepo(FALSE)
 {
 	m_regAutoClose = CRegDWORD(_T("Software\\TortoiseSVN\\AutoClose"));
 	m_regDefaultLogs = CRegDWORD(_T("Software\\TortoiseSVN\\NumberOfLogs"), 100);
@@ -51,6 +52,7 @@ CSetDialogs::CSetDialogs()
 	m_regOldLogAPIs = CRegDWORD(_T("Software\\TortoiseSVN\\OldLogAPI"), FALSE);
 	m_regAutocompletionTimeout = CRegDWORD(_T("Software\\TortoiseSVN\\AutocompleteParseTimeout"), 5);
 	m_regSpell = CRegDWORD(_T("Software\\TortoiseSVN\\Spellchecker"), TRUE);
+	m_regCheckRepo = CRegDWORD(_T("Software\\TortoiseSVN\\CheckRepo"), FALSE);
 }
 
 CSetDialogs::~CSetDialogs()
@@ -75,6 +77,7 @@ void CSetDialogs::SaveData()
 	m_regOldLogAPIs = m_bOldLogAPIs;
 	m_regAutocompletionTimeout = m_dwAutocompletionTimeout;
 	m_regSpell = m_bSpell;
+	m_regCheckRepo = m_bCheckRepo;
 }
 
 void CSetDialogs::DoDataExchange(CDataExchange* pDX)
@@ -97,6 +100,7 @@ void CSetDialogs::DoDataExchange(CDataExchange* pDX)
 	DDX_Text(pDX, IDC_AUTOCOMPLETIONTIMEOUT, m_dwAutocompletionTimeout);
 	DDV_MinMaxUInt(pDX, m_dwAutocompletionTimeout, 1, 100);
 	DDX_Check(pDX, IDC_SPELL, m_bSpell);
+	DDX_Check(pDX, IDC_REPOCHECK, m_bCheckRepo);
 }
 
 
@@ -110,6 +114,7 @@ BEGIN_MESSAGE_MAP(CSetDialogs, CPropertyPage)
 	ON_BN_CLICKED(IDC_OLDAPILOGS, OnBnClickedOldapilogs)
 	ON_EN_CHANGE(IDC_AUTOCOMPLETIONTIMEOUT, OnEnChangeAutocompletiontimeout)
 	ON_BN_CLICKED(IDC_SPELL, OnBnClickedSpell)
+	ON_BN_CLICKED(IDC_REPOCHECK, OnBnClickedRepocheck)
 END_MESSAGE_MAP()
 
 
@@ -142,6 +147,7 @@ BOOL CSetDialogs::OnInitDialog()
 	m_bOldLogAPIs = m_regOldLogAPIs;
 	m_dwAutocompletionTimeout = m_regAutocompletionTimeout;
 	m_bSpell = m_regSpell;
+	m_bCheckRepo = m_regCheckRepo;
 
 	for (int i=0; i<m_cAutoClose.GetCount(); ++i)
 		if (m_cAutoClose.GetItemData(i)==m_dwAutoClose)
@@ -234,6 +240,11 @@ void CSetDialogs::OnBnClickedSpell()
 	SetModified();
 }
 
+void CSetDialogs::OnBnClickedRepocheck()
+{
+	SetModified();
+}
+
 BOOL CSetDialogs::OnApply()
 {
 	UpdateData();
@@ -250,6 +261,7 @@ void CSetDialogs::OnCbnSelchangeAutoclosecombo()
 	}
 	SetModified();
 }
+
 
 
 
